--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -21,10 +21,15 @@
         еще</button>
     </div>
 
-    <!-- [count]="someCountVar" [page]="somePageVar" [perPage]="somePerPageVar" [pagesToShow]="5"
-    [loading]="someLoadingVar" (onPrev)="prevPage()" (onNext)="nextPage()" (onPage)="goToPage($event)" -->
-
-    <app-pagination></app-pagination>
+    <app-pagination 
+      (goPage)="goToPage($event)"
+      (goNext)="onNext()"
+      (goPrev)="onPrev()"
+      [pagesToShow]="3"
+      [page]="pagePag"
+      [perPage]="limit"
+      [count]="total">
+    </app-pagination>
 
   </div>
 
